src/css/styles.css
*{
    box-sizing: border-box;
}

body {
    margin-top: 0px;
    margin-bottom: 0px;
    margin-left: 0px;
    margin-right: 0px;
}

h1 {
    font-family: 'Cormorant', serif;
    font-weight: 400;
    font-size: 94px;
    color: black;
    text-align: center;
    width: 900px;
    margin: 0 auto;
    margin-top: 75px;
}

h2 {
    margin-top: 0px;
    margin-bottom: 0px;     
}

h3 {
    font-family: 'Montserrat', sans-serif;
    font-weight: 500;
    font-size: 26px;
    text-align: center;
    color: #8499B1;
    text-transform: uppercase
}

h4 {
    font-family: 'Montserrat', sans-serif;
    font-weight: 500;
    font-size: 18px;
    text-align: center;
    color: #8499B1;
    text-transform: uppercase;
    margin-top: 40px;
    margin-bottom: 40px;
    padding-right: 5px;
}

a {
    text-decoration: none;
}

/* a:visited {
    color: inherit;
} */


/* TOP BANNER */

.top-banner {
    height: 132px;
    top: 0;
    padding-top: 30px;
    padding-left: 64px;
    color: white;  
    background-color: #0C1821;  
}

.banner a {
    font-family: 'Cormorant', serif;
    font-size: 59px;
    width: 700px;
    text-decoration: none;
    color: white;
}

.banner:visited {
    color: inherit;
}

.nav {
    height: 76px;
    background-color: #A5C4D4;
}

.nav-buttons {
    float: right;
    list-style: none;  
    display: flex;
    justify-content: space-between;
    margin-top: 0px;
    margin-bottom: 0px;  
    margin-right: 44px;
    height: 76px;
}

.nav-buttons li {
    text-decoration: none;
    font-family: 'Montserrat', sans-serif;
    font-size: 18px;
    font-weight: 600; 
    height: 76px;   
}

.nav-buttons li:hover {
    border-bottom: 4px solid #0C1821;
}

.about-button {
    padding: 25px 45px 27px;
}

.about-button-text {
    text-decoration: none;
    color: #0C1821; 
}

.about-button:hover {
    border-bottom: 4px solid #0C1821;
}

.awards-button {
    padding: 25px 45px 27px;
}

.awards-button-text {
    text-decoration: none;
    color: #0C1821;
}

.gallery-button {
    padding: 25px 45px 27px;
}

.gallery-button-text {
    text-decoration: none;
    color: #0C1821;
}

.family-button {
    padding: 25px 20px 27px 45px;
}

.family-button-text {
    text-decoration: none;
    color: #0C1821;
}

/* FOOTER */

.footer-section {
    height: 71px;
    background-color: #0C1821;
    bottom: 0; 
}

.footer {
    color: white;
    font-family: 'Montserrat', sans-serif;
    font-size: 14px;
    text-align: center;
    margin-top: 0px;
    margin-bottom: 0px;
    padding-top: 25px;
}


/* HOME PAGE */

.home-about-container {
    max-width: 1087px;
    height: 950px;
    display: flex;
    justify-content: space-between;
    margin: 0 auto;
    padding-top: 83px;
}

.home-about-content {
    font-family: 'Montserrat', sans-serif;
    width: 380px;
    margin: 0 auto;
    padding-top: 70px;  
}

.about-title {
    color: black;
    font-family: 'Cormorant', serif;
    font-size: 59px;
    font-weight: 600;
}

.home-words {
    margin-bottom: 40px;
    line-height: 35px;
}

.read-more-button {
    font-family: 'Montserrat', sans-serif;
    background-color: #1B2A41;
    color: white;
    text-decoration: none;
    padding: 18px 30px;   
}

.home-works-section {
    height: 870px;
    background-color: #EBF0F2;
    
}

.recent-works-title {
    color: black;
    font-family: 'Cormorant', serif;
    font-size: 59px;
    font-weight: 600;
    text-align: center;
    padding-top: 84px;
    margin-bottom: 68px;
}



.view-gallery-button-container {
    max-width: 184px;
    margin: 0 auto;
}

.view-gallery-button {
    font-family: 'Montserrat', sans-serif;
    background-color: #1B2A41;
    color: white;
    text-decoration: none;
    padding: 18px 30px;
}



/* homepage carousel */

.home__carousel {
    overflow: hidden;
    max-width: 700px;
    position: relative;
    margin: 0 auto;
    margin-bottom: 70px;
}


.home__carousel__item {
    margin: 0 auto;
    width: 500px;
}

.home__carousel .home__carousel__item,
.home__carousel .home__carousel__item--hidden {
    display: none;
}

.home__carousel .home__carousel__item img {
    max-width: 500px;
    width: 100%;
    height: auto;
}

.home__carousel .home__carousel__item--visible {
    display: block;
    animation: fadeVisibility 0.5s;
}

.home__carousel .home__carousel__actions {
    display: flex;
    width: 100%;
    justify-content: space-between;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
}

.home__carousel .home__carousel__actions button {
    border-radius: 50px;
    border: 0;
    font-weight: bold;
    cursor: pointer;
    width: 40px;
    height: 40px;
    background-color: #ccd6e2;
}


/* AWARDS PAGE */

.awards-section {
    max-width: 1100px;
    margin: 0 auto;
    margin-bottom: 125px;
}

.awards-container {
    max-width: 1440px;
    margin-top: 77px;
}

.awards-image-container {
    max-width: 343px;
    margin: 0 auto;
    margin-bottom: 91px;
}

.awards-content {
    font-family: 'Montserrat', sans-serif;
    font-size: 18px;
    font-weight: 400;
    width: 864px;
    margin: 0 auto; 
    line-height: 35px; 
}

/* GALLERY PAGE */

/* Content section */

.gallery-page-container {
    max-width: 1100px;
    margin: 0 auto;
    margin-bottom: 125px;
}

.gallery-container {
    margin-top: 77px;
}

.gallery-image-container {
    max-width: 343px;
    margin: 0 auto;
    margin-bottom: 91px;
}

.gallery-content {
    font-family: 'Montserrat', sans-serif;
    font-size: 18px;
    font-weight: 400;
    width: 864px;
    margin: 0 auto; 
    margin-bottom: 50px;
    line-height: 35px;
}

/* carousel */

.carousel {
    overflow: hidden;
    /* max-width: 600px; */
    width: 80%;
    height: 660px;
    position: relative;
    margin: 0 auto;
}

.carousel__track-container {
    height: 100%;
    width: 100%;
}

.carousel__item {
    margin: 0 auto;
    width: 430px;
    height: 580px;
}

.carousel .carousel__item,
.carousel .carousel__item--hidden {
    display: none;
}

.carousel .carousel__item img {
    max-width: 500px;
    width: 100%;
    height: auto;
    object-fit: contain;
    height: 580px;
}

.carousel .carousel__item--visible {
    display: block;
    animation: fadeVisibility 0.5s;
}

.carousel .carousel__actions {
    display: flex;
    width: 100%;
    justify-content: space-between;
    position: absolute;
    top: 45%;
    transform: translateY(-50%);
}

.carousel .carousel__actions button {
    border-radius: 50px;
    border: 0;
    font-weight: bold;
    cursor: pointer;
    width: 40px;
    height: 40px;
}

/* .carousel .carousel__actions button#carousel_button--prev {
    margin-left: 20px;
}

.carousel .carousel__actions button#carousel_button--next {
    margin-right: 20px;
} */

@keyframes fadeVisibility {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
        transform: opacity linear;
    }
}

/* .art-2__container {
    height: 600px;
    
} */

.art-caption {
    font-family: 'Montserrat', sans-serif;
    font-size: 13px;
    font-weight: 400;
    line-height: 20px;
    /* width: 420px; */
}

.caption-5 {
    margin-top: 0px;
}

.caption-6 {
    margin-top: 0px;
}

.life-drawing {
    height: 580px;
}

.bishop-painting {
    height: 580;
}


/* ABOUT PAGE */

.about-section {
    max-width: 864px;
    margin: 0 auto;
}

.about-page-title {
    width: 864px;
}

.about-content {
    font-family: 'Montserrat', sans-serif;
    font-size: 18px;
    font-weight: 400;
    line-height: 35px; 
    margin-top: 77px;
    margin-bottom: 120px;
}



/* FAMILY PAGE */

.family-page-container {
    height: 1640px;
    max-width: 1350px;
    padding-left: 20px;
    margin: 0 auto;
}

.family-row1-container {
    max-width: 300px;
    margin: 0 auto;
    margin-top: 50px;
}

.bern-mu-photo {
    width: 300px;
}

.bern-caption {
    font-family: 'Montserrat', sans-serif;
    font-size: 16px;
    font-weight: 400;
    width: 320px;
}

.family-row2-section {
    margin: 0 auto;
    max-width: 805px;
    margin-top: 30px;
}

.family-row2-container {
    display: flex;
    justify-content: space-between;
    width: 805px;
    margin-right: 10px;  
}

.row2-caption {
    font-family: 'Montserrat', sans-serif;
    font-size: 16px;
    font-weight: 400;
    width: 165px;
    margin-bottom: 0px;
} 

.tree-steve {
    border: 2px solid #30D5C8;
    padding: 18px 18px;
}

.steve-caption {
    color: #30D5C8;
}

.tree-julie {
    border: 2px solid #0D3470;
    padding: 18px 18px;
}

.julie-caption {
    color: #0D3470;
}

.tree-glyn {
    border: 2px solid #0974ED;
    padding: 18px 18px;
}

.glyn-caption {
    color: #0974ED;
}

.row2-photo {
    width: 220px;
}

.family-row3-container {
    display: flex;
    justify-content: space-between;
}  

.tree-ant {
    padding: 10px 10px;
    margin-right: 3px;
    border: 2px solid #30D5C8;
}

.tree-mark {
    padding: 10px 10px;
    margin-right: 3px;
    border: 2px solid #30D5C8;
}

.tree-jamie {
    padding: 10px 10px;
    margin-right: 7px;
    border: 2px solid #30D5C8;
}

.tree-emily {
    padding: 10px 10px;
    margin-right: 3px;
    margin-left: 7px;
    border: 2px solid #0D3470;
}

.tree-dan {
    padding: 10px 10px;
    margin-right: 7px;
    margin-left: 3px;
    border: 2px solid #0D3470;
}

.tree-ro {
    padding: 10px 10px;
    margin-right: 3px;
    margin-left: 7px;
    border: 2px solid #0974ED;
}

.tree-hal {
    padding: 10px 10px;
    margin-left: 3px;
    border: 2px solid #0974ED;
}

.row3-photo {
    width: 150px;
}

.row3-caption {
    font-family: 'Montserrat', sans-serif;
    font-size: 14px;
    font-weight: 400;
    margin-bottom: 0px;
}

.ant-caption {
    width: 150px;
    color: #30D5C8;
}

.mark-caption {
    width: 130px;
    color: #30D5C8;
}

.jamie-caption {
    width: 120px;
    color: #30D5C8;
}

.emily-caption {
    width: 150px;
    color: #1B2A41;
}

.dan-caption {
    font-family: 'Montserrat', sans-serif;
    font-size: 14px;
    font-weight: 400;
    width: 150px;
    color: #1B2A41;
}

.ro-caption {
    width: 140px;
    color: #2273cf;
}

.hal-caption {
    width: 140px;
    color: #2273cf;
}

.family-row4-section {
    display: flex;
    justify-content:flex-start; 
    width: 400px;
}

.ant-kids-container {
    margin-right: 97px;
    color: #5f7083;
}

.mark-kids-container {
    color: #8098b4;
}

.row4-caption {
    font-family: 'Montserrat', sans-serif;
    font-size: 14px;
    font-weight: 400;
    width: 95px;
}

